Add requirements for input data

--- a/project_2/project_2.ipynb
+++ b/project_2/project_2.ipynb
@@ -53,6 +53,10 @@
     "Task: Write code that will print the three words with the highest **tf-idf** value in the given target_chapter \n",
     "chapter in descending tf-idf order, separated by a space.\n",
     "\n",
+    "Data: every word shall start on new line. Chapters are separated by ``'[new chapter]'`` deliminator.\n",
+    "First chapter starts without ``'[new chapter]'``. Last chapter ends with the end of document.\n",
+    "Chapters enumeration starts with zero.\n",
+    "\n",
     "---"
    ]
   },
